syntax = "proto3";

package org.project_planton.app.v1;

// Request message for creating a cloud resource.
message CreateCloudResourceRequest {
  // YAML manifest content as string.
  string manifest = 1;
}

// Response message containing the created cloud resource.
message CreateCloudResourceResponse {
  // The created cloud resource.
  CloudResource resource = 1;
}

// PageInfo represents pagination parameters.
// Page numbers are 0-indexed (page 0 is the first page).
message PageInfo {
  // Page number (0-indexed, where 0 is the first page).
  int32 num = 1;
  // Number of items per page.
  int32 size = 2;
}

// Request message for listing cloud resources.
message ListCloudResourcesRequest {
  // Optional filter by kind (e.g., "CivoVpc", "AwsRdsInstance").
  optional string kind = 1;
  // Pagination parameters (optional). If not provided, returns all resources.
  optional PageInfo page_info = 2;
}

// Response message containing a list of cloud resources.
message ListCloudResourcesResponse {
  // List of cloud resources.
  repeated CloudResource resources = 1;
  // Total number of pages available (only set when page_info is provided).
  int32 total_pages = 2;
}

// Request message for retrieving a cloud resource by ID.
message GetCloudResourceRequest {
  // The unique identifier of the cloud resource.
  string id = 1;
}

// Response message containing the retrieved cloud resource.
message GetCloudResourceResponse {
  // The requested cloud resource.
  CloudResource resource = 1;
}

// Request message for updating a cloud resource.
message UpdateCloudResourceRequest {
  // The unique identifier of the cloud resource to update.
  string id = 1;
  // YAML manifest content as string.
  string manifest = 2;
  // Provider credentials are automatically resolved from the database
  // based on the environment and provider type. No need to provide credentials in the request.
}

// Response message containing the updated cloud resource.
message UpdateCloudResourceResponse {
  // The updated cloud resource.
  CloudResource resource = 1;
}

// Request message for deleting a cloud resource.
message DeleteCloudResourceRequest {
  // The unique identifier of the cloud resource to delete.
  string id = 1;
}

// Response message for delete operation.
message DeleteCloudResourceResponse {
  // Success status message.
  string message = 1;
}

// Request message for applying a cloud resource (upsert).
message ApplyCloudResourceRequest {
  // YAML manifest content as string.
  string manifest = 1;
}

// Response message containing the applied cloud resource.
message ApplyCloudResourceResponse {
  // The created or updated cloud resource.
  CloudResource resource = 1;
  // Indicates whether the resource was created (true) or updated (false).
  bool created = 2;
}

// Request message for counting cloud resources.
message CountCloudResourcesRequest {
  // Optional filter by kind (e.g., "CivoVpc", "AwsRdsInstance").
  optional string kind = 1;
}

// Response message containing the count of cloud resources.
message CountCloudResourcesResponse {
  // Total count of cloud resources matching the filter.
  int64 count = 1;
}
